--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,13 @@ table,td,tr,th{
     padding: 20px;
     text-align: center;
 }
+body{
+    background-color:#3CB371;
+}
+img{
+    height: 150px;
+    width: 150px;
+}
 
 
 
